tests/sumo/basic/person/errors/person_triggered_invalidFrom/errors.sumo
Error: Disconnected plan for triggered person 'p0' (edge 'gneE1' != edge 'gneE0').
Quitting (on error).
